# sofa

./: .gitlab-ci.yml  CMakeLists.txt  Doxyfile  _2home_2runner_2work_2sofa_2sofa_2_sofa_2framework_2_helper_2src_2sofa_2helper_2io_2_sphere_loader_8h-example.html  _2home_2runner_2work_2sofa_2sofa_2_sofa_2framework_2_helper_2src_2sofa_2helper_2io_2_xsp_loader_8h-example.html  _a_p_i_version_8cpp.html  _a_p_i_version_8cpp.js  _about_s_o_f_a_dialog_8cpp.html  _about_s_o_f_a_dialog_8h.html  _about_s_o_f_a_dialog_8h_source.html  _abstract_data_link_8cpp.html  _abstract_data_link_8h.html  _abstract_data_link_8h_source.html  _abstract_type_info_8cpp.html  _abstract_type_info_8h.html  _abstract_type_info_8h_source.html  _add_frame_button_setting_8cpp.html  _add_frame_button_setting_8cpp.js  _add_recorded_camera_button_setting_8cpp.html  _add_recorded_camera_button_setting_8cpp.js  _add_recorded_camera_performer_8cpp.html  _add_recorded_camera_performer_8cpp.js  _add_resource_repository_8cpp.html  _add_resource_repository_8cpp.js  _add_resource_repository__test_8cpp.html  _add_resource_repository__test_8cpp.js  _advanced_timer_8cpp.html  _advanced_timer_8cpp.js  _advanced_timer_8h.html  _advanced_timer_8h_source.html  _advanced_timer__test_8cpp.html  _advanced_timer__test_8cpp.js  _affine_movement_constraint_8cpp.html  _affine_movement_constraint_8cpp.js  _affine_movement_constraint__test_8cpp.html  _affine_movement_constraint__test_8cpp.js  _affine_patch__test_8cpp.html  _affine_patch__test_8cpp.js  _angular_spring_force_field_8cpp.html  _angular_spring_force_field_8cpp.js  (+15717 more)
.github/workflows/: build-and-test.yml  publish_dox.yml  sofa_ci.yml  sofa_slim_ubuntu.yml  trigger-build-and-tests.yml
Sofa/: CMakeLists.txt
Sofa/Component/LinearSystem/: CMakeLists.txt
Sofa/Component/Visual/: CMakeLists.txt
Sofa/GL/: CMakeLists.txt
Sofa/GUI/Common/: CMakeLists.txt
Sofa/framework/Config/: CMakeLists.txt
Sofa/framework/Core/: CMakeLists.txt
Sofa/framework/DefaultType/: CMakeLists.txt
Sofa/framework/Helper/: CMakeLists.txt
Sofa/framework/LinearAlgebra/: CMakeLists.txt
Sofa/framework/Type/: CMakeLists.txt
SofaGui/: CMakeLists.txt  SofaGuiConfig.cmake.in  config.h.in
SofaKernel/modules/Sofa.Config/: CMakeLists.txt
SofaKernel/modules/Sofa.Type/: CMakeLists.txt
SofaKernel/modules/SofaBaseCollision/: BruteForceDetection.h
applications/plugins/: CMakeLists.txt
applications/plugins/SofaCUDA/extensions/: CMakeLists.txt
applications/plugins/SofaCUDA/extensions/GL/: CMakeLists.txt
applications/plugins/SofaCUDA/extensions/GL/src/SofaCUDA/GL/: CudaVisualModel.cpp  CudaVisualModel.h  CudaVisualModel.inl  config.h.in  init.cpp  init.h
applications/projects/: CMakeLists.txt
applications/projects/ParallelRunSofa/: CMakeLists.txt  Main.cpp
applications/projects/SofaGuiGlut/: CMakeLists.txt  Main.cpp  SimpleGUI.cpp  SimpleGUI.h
applications/sofa/gui/glfw/: CMakeLists.txt  GLFWGui.cpp  GLFWGui.h
applications/sofa/gui/glfw/glfw/: CMakeLists.txt
examples/Demos/: caduceus_nomt.scn
extlibs/: CMakeLists.txt
modules/SofaBoundaryCondition/: PartialFixedConstraint.h  PartialLinearMovementConstraint.h
modules/SofaConstraint/: GenericConstraintSolver.h  LMDNewProximityIntersection.cpp  LMDNewProximityIntersection.inl  LocalMinDistance.cpp
modules/SofaGeneralDeformable/: TriangularBiquadraticSpringsForceField.h  TriangularQuadraticSpringsForceField.h  TriangularTensorMassForceField.h
modules/SofaGeneralEngine/: GenerateRigidMass.h  IndicesFromValues.cpp  IndicesFromValues.h  IndicesFromValues.inl  MapIndices.cpp  MapIndices.h  MergeMeshes.h  NormalsFromPoints.h  NormalsFromPoints.inl  TextureInterpolation.inl  ValuesFromIndices.cpp  ValuesFromIndices.h
modules/SofaGeneralLoader/: MeshTrianLoader.cpp  MeshTrianLoader.h  ReadTopology.h  ReadTopology.inl  VoxelGridLoader.h
modules/SofaGeneralMeshCollision/: DirectSAP.h  IncrSAP.h
modules/SofaGeneralSimpleFem/: BeamFEMForceField.inl  HexahedralFEMForceField.h  HexahedralFEMForceField.inl  HexahedralFEMForceFieldAndMass.h  HexahedralFEMForceFieldAndMass.inl  HexahedronFEMForceFieldAndMass.h  HexahedronFEMForceFieldAndMass.inl  TetrahedralCorotationalFEMForceField.h  TetrahedralCorotationalFEMForceField.inl
modules/SofaMiscExtra/: MeshTetraStuffing.cpp  MeshTetraStuffing.h
modules/SofaMiscFem/: TetrahedralTensorMassForceField.h  TriangleFEMForceField.h  TriangularFEMForceField.h
modules/SofaMiscMapping/: BarycentricMappingRigid.h
modules/SofaNonUniformFem/: CMakeLists.txt
modules/SofaTopologyMapping/: Mesh2PointTopologicalMapping.cpp  Mesh2PointTopologicalMapping.h  SimpleTesselatedHexaTopologicalMapping.cpp  SimpleTesselatedHexaTopologicalMapping.h  SimpleTesselatedTetraTopologicalMapping.cpp  SimpleTesselatedTetraTopologicalMapping.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_17.js  classes_18.js  (+223 more)
(+896 files in other folders)
